--- a/P4/linear_algebra-master/linear_regression_project.ipynb
+++ b/P4/linear_algebra-master/linear_regression_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.061s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.018s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.064s\n",
+      "Ran 1 test in 0.037s\n",
       "\n",
       "OK\n"
      ]
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.012s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -680,10 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 实现 Gaussain Jordan 方法求解 Ax = b\n",
@@ -702,7 +700,7 @@
     "\"\"\"\n",
     "def gj_Solve(A, b, decPts=4, epsilon = 1.0e-16):\n",
     "    #步骤1 检查A，b是否行数相同\n",
-    "    if shape(A)[1] != shape(b)[0]:\n",
+    "    if shape(A)[0] != shape(b)[0]:\n",
     "        raise ValueError\n",
     "    #步骤2 构造增广矩阵Ab\n",
     "    Ab = augmentMatrix(A, b)\n",
@@ -710,9 +708,14 @@
     "    # 对矩阵Ab的第一行x\n",
     "    for i in range(shape(A)[0]):\n",
     "        # 选择当前元素所在列最大的行\n",
+    "        tmp_max_line = i\n",
     "        for l in range(i, shape(A)[0]): \n",
-    "            if Ab[l][i] > Ab[i][i]:\n",
-    "                swapRows(Ab, i, l)        \n",
+    "            if Ab[l][i] > Ab[tmp_max_line][i]:\n",
+    "                tmp_max_line = l\n",
+    "        if Ab[tmp_max_line][i] < epsilon:\n",
+    "            return None\n",
+    "        else:\n",
+    "            swapRows(Ab, i, tmp_max_line) \n",
     "        if Ab[i][i] != 1:\n",
     "            if abs(Ab[i][i]) > epsilon:\n",
     "                scaleRow(Ab, i, 1/Ab[i][i]) # 对角行单位化\n",
@@ -722,17 +725,6 @@
     "            # 对矩阵Ab的第i+1行y消元\n",
     "            if i!= j:\n",
     "                addScaledRow(Ab, j, i, -Ab[j][i])\n",
-    "# #     print(\"-----------行规范矩阵------------\")\n",
-    "# #    print(Ab)\n",
-    "# #     print(\"-----------回溯------------\")\n",
-    "#     for k in range(shape(A)[1]):\n",
-    "#         j = shape(A)[0] - 1 - k # 从倒数第二列开始\n",
-    "#         if j >= 1:\n",
-    "#             for m in range(j):\n",
-    "#                 if Ab[m][j] != 0:\n",
-    "#                     addScaledRow(Ab, m, j, -Ab[m][j])\n",
-    "# #     print(Ab)\n",
-    "#    print(\"-----------四舍五入------------\")\n",
     "    matxRound(Ab, decPts)\n",
     "    print(Ab)\n",
     "    result = []\n",
@@ -744,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -753,36 +745,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "F"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.0, 0.0, 0.0, -0.0, 0.469], [0.0, 1.0, 0.0, 0.0, 0.0196], [0.0, 0.0, 1.0, 0.0, -0.1769], [0.0, 0.0, 0.0, 1.0, 0.2236]]\n",
-      "[[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.0, -0.7437], [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.2164], [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, -0.0, 0.5675], [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, -0.0, 0.1641], [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, -0.0, -0.8323], [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, -0.333], [-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.1642]]\n",
-      "[[1.0, 0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.4826], [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.1647], [0.0, 0.0, 1.0, 0.0, -0.0, 0.0, 0.0, -0.3396], [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, -0.2025], [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, -0.142], [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.1515], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.1177]]\n",
-      "[[1.0, 0.0, -0.0, 0.0, 0.8258], [0.0, 1.0, -0.0, 0.0, 0.5994], [0.0, 0.0, 1.0, 0.0, -1.0058], [0.0, 0.0, 0.0, 1.0, -0.8433]]\n",
-      "[[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.3123], [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.2968], [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.7827], [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, -0.8147], [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.1977], [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, -0.1535], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, -1.3707], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.4037]]\n",
-      "[[1.0, 3.4873, 0.0, 0.0, 0.0, -2.0907], [0.0, 12.7428, 0.0, 0.0, 0.0, -3.5514], [0.0, 3.2371, 1.0, 0.0, 0.0, -2.3063], [0.0, -1.5553, 0.0, 1.0, 0.0, 0.3194], [0.0, -0.7276, 0.0, 0.0, 1.0, 0.6603]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "F\n",
       "======================================================================\n",
       "FAIL: test_gj_Solve (__main__.LinearRegressionTestCase)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Administrator\\Documents\\MachineLearn\\P4\\test.py\", line 153, in test_gj_Solve\n",
-      "    self.assertTrue(loss<0.1,\"Bad result.\")\n",
-      "AssertionError: False is not true : Bad result.\n",
+      "  File \"C:\\Users\\TLLANO\\Documents\\MachineLearn\\P4\\linear_algebra-master\\test.py\", line 149, in test_gj_Solve\n",
+      "    self.assertNotEqual(x,None,\"Matrix A is not singular\")\n",
+      "AssertionError: None == None : Matrix A is not singular\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.021s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "FAILED (failures=1)\n"
      ]
