--- a/Q1finding_donors/finding_donors.ipynb
+++ b/Q1finding_donors/finding_donors.ipynb
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,10 +1820,10 @@
     "    results['acc_val'] = accuracy_score(y_val, predictions_val)\n",
     "    \n",
     "    # TODO：计算在最前面300个训练数据上的F-score\n",
-    "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, average=None, beta=0.5)\n",
+    "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, beta=0.5)\n",
     "        \n",
     "    # TODO：计算验证集上的F-score\n",
-    "    results['f_val'] = fbeta_score(y_val, predictions_val, average=None, beta=0.5)\n",
+    "    results['f_val'] = fbeta_score(y_val, predictions_val, beta=0.5)\n",
     "       \n",
     "    # 成功\n",
     "    print \"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size)\n",
