--- a/deep learning/example/03tensorflow入门.ipynb
+++ b/deep learning/example/03tensorflow入门.ipynb
@@ -35597,6 +35597,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weights:\n",
+      "[[-1.3336271  -0.09045336 -0.17338656]\n",
+      " [-0.5119246  -0.22988157 -0.56073236]]\n",
+      "Bias:\n",
+      "[-0.78012824  1.0783366   0.52476186]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
