--- a/unsupervised learning/04svd/奇异值分解.md
+++ b/unsupervised learning/04svd/奇异值分解.md
@@ -1,8 +1,73 @@
+﻿### 1.0 导论
 定理1：如果A是对称矩阵，那么不同特征空间向量是正交的——它们对应不同的特征值。
 
 定理2：一个n*n矩阵A可正交对角化的充分必要条件是A是对称矩阵。
 
-奇异值分解
-第一步，将矩阵A<sup>T</sup>A正交对角化。即求矩阵A<sup>T</sup>A
+定理3：假若{v<sub>1</sub>,...,v<sub>n</sub>}是包含A<sup>T</sup>A特征向量的R<sup>n</sup>上的单位正交基，重新整理使得对应的A<sup>T</sup>A的特征值满足λ<sub>1</sub> >= ... >= λ<sub>n</sub>。假若A有r个非零奇异值。那么{Av<sub>1</sub>,...,Av<sub>r</sub>}是ColA的一个正交基，且rank A = r。
 
-P418
+### 2.0 奇异值分解证明
+
+设A是秩为r的mxn矩阵，那么存在一个mxn矩阵∑，此处D的对角线元素是A的前r个奇异值，σ1>=σ2>=...>=σr>0，并且存在mxm正交矩阵U和nxn正交矩阵V，是的A=UΣV<sup>T</sup>
+
+![svd_1.png](https://i.imgur.com/wDz4Wqu.png)
+
+
+证明：假设λ<sub>i</sub>和vλ<sub>j</sub>，如定理3使得{Av<sub>1</sub>,...,Av<sub>r</sub>}是Col A的正交基，将每一个Av<sub>i</sub>单位化得到一个标准正交基{u<sub>1</sub>,...,u<sub>r</sub>}，此处
+
+![svd_3.png](https://i.imgur.com/qvXvXxH.png)
+
+而且
+
+Av<sub>i</sub> = σ<sub>i</sub> u<sub>i</sub> (1 =<i <=r)
+
+现在将{u<sub>1</sub>,...,u<sub>r</sub>}扩充为R<sup>n</sup>上的单位正交基{u<sub>1</sub>,...,u<sub>m</sub>}。而且取
+
+U = [u<sub>1</sub> ... u<sub>m</sub>]
+
+V = [v<sub>1</sub> ... v<sub>m</sub>]
+
+由构造可知，U和V都是正交矩阵，同样由：
+
+AV = [Av<sub>1</sub> ... Av<sub>r</sub>, 0 ... 0] = [σ<sub>1</sub>u<sub>1</sub> ... σ<sub>r</sub>u<sub>r</sub>, 0 ... 0]
+
+设D是对角元素为σ<sub>1</sub>,...,σ<sub>r</sub>的对角矩阵，那么
+
+![svd_4.png](https://i.imgur.com/A1OMvIC.png)
+
+由于V是一个正交矩阵，UΣV<sup>T</sup> = AVV<sup>T</sup> = A。
+
+### 3.0 奇异值分解步骤
+奇异值分解：
+
+![svd_7.png](https://i.imgur.com/sBwVxwm.png) 
+
+**第一步**，将矩阵A<sup>T</sup>A正交对角化。即求矩阵A<sup>T</sup>A
+的特征值及其对应的特征向量的标准正交集。
+
+![svd_8.png](https://i.imgur.com/uBiR6oE.png)
+
+矩阵A<sup>T</sup>A的特征值是λ<sub>1</sub>=360 λ<sub>2</sub>=90 λ<sub>3</sub>=0，对应的单位向量是
+
+![svd_9.png](https://i.imgur.com/Jkh9v9k.png)
+
+**第二步**，算出V和Σ。将A<sup>T</sup>A的特征值按降序排列。
+
+![svd_10.png](https://i.imgur.com/O1E76ay.png)
+
+特征值的算术平方根就是奇异值：σ<sub>1</sub>=360<sup>1/2</sup>、σ<sub>2</sub>=90<sup>1/2</sup>、σ<sub>3</sub>=0
+
+其中的非零奇异值就是矩阵D的对角元素。矩阵Σ与矩阵A的行列数相同，以矩阵D为其左上角，其他元素为0
+
+![svd_11.png](https://i.imgur.com/Md8yIc1.png)
+
+**第三步**，构造U。当矩阵A的秩为r时，矩阵U的前r列是从Av<sub>1</sub> ... Av<sub>r</sub>，计算得到的单位向量。此例中，A有两个非零奇异值，因此rank A=2。根据Av<sub>i</sub> = σ<sub>i</sub> u<sub>i</sub> (1 =<i <=r)，u<sub>i</sub>是单位向量，有||Av<sub>1</sub>||=σ<sub>1</sub>，||Av<sub>2</sub>||=σ<sub>2</sub>，于是：
+
+![svd_5.png](https://i.imgur.com/v8zyRCA.png)
+
+留意到{u<sub>1</sub>，u<sub>2</sub>}已是R<sup>2</sup>的一个基，因此构造U不需要另外的向量，U={u<sub>1</sub>，u<sub>2</sub>}，A的奇异值分解是：
+
+![svd_6.png](https://i.imgur.com/JBAJVer.png)
+
+参考：
+
+[奇异值分解(SVD)原理与在降维中的应用](https://www.cnblogs.com/pinard/p/6251584.html)
