--- a/unsupervised learning/04svd/奇异值分解.md
+++ b/unsupervised learning/04svd/奇异值分解.md
@@ -1,4 +1,5 @@
-﻿### 1.0 导论
+﻿那么对任意m×n的矩阵，能否找到一组正交基使得经过它变换后还是正交基，找到正交基的过程，就是SVD
+### 1.0 导论
 定理1：如果A是对称矩阵，那么不同特征空间向量是正交的——它们对应不同的特征值。
 
 定理2：一个n*n矩阵A可正交对角化的充分必要条件是A是对称矩阵。
