--- a/deep learning/RNN/循环序列模型.md
+++ b/deep learning/RNN/循环序列模型.md
@@ -1,4 +1,4 @@
-## 1.0 第一周 循环神经网络(Recurrent Neural Networks,RNN)
+﻿## 1.0 第一周 循环神经网络(Recurrent Neural Networks,RNN)
 ### 1.1 为什么选择序列模型
 在DNN和CNN中，训练样本的输入和输出是比较的确定的。但是有一类问题DNN和CNN不好解决，就是训练样本输入是连续的序列,且序列的长短不一，比如基于时间的序列：一段段连续的语音，一段段连续的手写文字。这些序列比较长，且长度不一，比较难直接的拆分成一个个独立的样本来通过DNN/CNN进行训练。
 
@@ -184,6 +184,60 @@ c<sup><\t></sup>可以是一个向量。如果c<sup><\t></sup>是100维，那么
 
 ![RNN_LSTM_1.png](https://i.imgur.com/0RxjW60.png)
 
-#### LSTM网络
+c<sup><\t></sup>有选择权取维持旧的c<sup><\t-1></sup>或者加上新的值c~<sup><\t></sup>，所以单独使用更新门Γ<sub>u</sub>、遗忘门Γ<sub>f</sub>。
+
+#### 1.10.01 LSTM网络
 ![RNN_LSTM_2.png](https://i.imgur.com/6UIhUsp.png)
 
+上图红线，只要正确的设置了遗忘门和更新门，LSTM是相当容易把c<sup><\0></sup>的值一直往下传递到右边。这就是为什么LSTM和GRU非常擅长于长时间记忆某个值，对于存在记忆细胞中的某个值，即是经过很长很长的时间步。
+
+#### 1.10.02 窥视孔连接
+
+最常用LSTM版本可能是门值不仅取决于a<sup><\t-1></sup>和x<sup><\t></sup>，有时候可以偷窥下c<sup><\t-1></sup>的值，这叫做“窥视孔连接”(peephole connection)。“**窥视孔连接**”其实的意思是门值不仅取决于a<sup><\t-1></sup>和x<sup><\t></sup>，也取决于上一个记忆细胞的值c<sup><\t-1></sup>。然后“窥视孔连接”就可以结合Γ<sub>u</sub>、Γ<sub>f</sub>、Γ<sub>o</sub>来计算。
+
+#### 1.10.03 LSTM反向传播
+门求偏导：
+
+![lstm_1.png](https://i.imgur.com/KLscNPG.png)
+
+参数求偏导：
+
+![lstm_2.png](https://i.imgur.com/Whdmq6X.png)
+
+为了计算db<sub>f</sub>、db<sub>u</sub>、db<sub>c</sub>、db<sub>o</sub>需要各自对dΓ<sub>r</sub><sup><\t></sup>、dΓ<sub>u</sub><sup><\t></sup>、dΓ<sub>o</sub><sup><\t></sup>、dc~<sup><\t></sup>求和。
+
+最后，计算隐藏状态、记忆状态和输入的偏导数：
+
+![lstm_3.png](https://i.imgur.com/y46lWLi.png)
+
+#### 1.10.04 GRU & LSTM
+GRU的优点是这是个更加简单的模型，所以更容易创建一个更大的网络，而且它只有两个门，在计算性上也运行得更快，然后它可以扩大模型的规模。
+
+LSTM更加强大和灵活。
+### 1.11 双向循环神经网络(Bidirectional RNN,BRNN)
+双向循环神经网络(Bidirectional RNN,BRNN)产生的背景：
+
+![BRNN_1.png](https://i.imgur.com/XuTdJHM.png)
+
+在命名实体识别中，单向的RNN不能判断上图第三个词是人名还是Teddy bears。
+
+![BRNN_2.png](https://i.imgur.com/ugVwsMJ.png)
+
+上图紫色序列是正向传播，绿色是反向循环。给定一个序列x<sup><1></sup>到x<sup><4></sup>，首先计算前向的a-><sup><1></sup>，然后计算前向的a-><sup><2></sup>，接着a-><sup><3></sup>、a-><sup><4></sup>。而反向序列从计算a<-<sup><4></sup>开始，反向进行，计算反向的a<-<sup><3></sup>，计算完了a<-<sup><3></sup>就可以用这些激活值计算反向的a<-<sup><2></sup>，然后是反向的a<-<sup><1></sup>，把这些激活值计算完了就可以计算预测结果了。这样时间x<sup><3></sup>不经输入过去的信息，还有现在的信息。同时考虑了过去和未来。
+
+![BRNN_3.png](https://i.imgur.com/SawIo7O.png)
+
+这些基本单元不仅仅是标准的RNN单元，也可以是GRU、LSTM单元。
+
+双向RNN网络模型的缺点：需要完整的数据的序列，才能预测任意位置。
+
+### 1.11 深层循环神经网络(Deep RNNs)
+深层循环神经网络(Deep RNNs):把RNN的多个层堆叠在一起构建更深的模型。
+
+![DRNN_1.png](https://i.imgur.com/Tjwu0Q6.png)
+
+x<sup>[l]<\t></sup>:表示第l层的激活值，<\t>表示第t个时间点。
+
+a<sup>[2]<3></sup> = g(W<sub>a</sub><sup>[2]</sup>[a<sup>[2]<2></sup>,a<sup>[1]<3></sup>] + b<sub>a</sub><sup>[2]</sup>)
+
+a<sup>[2]<3></sup>的激活值从a<sup>[2]<2></sup>和a<sup>[1]<3></sup>输入。
