update feature learn
Signed-off-by: TLLANO <TLLANO@163.com>

--- a/supervised learning/10boosting/提升树.md
+++ b/supervised learning/10boosting/提升树.md
@@ -1,4 +1,4 @@
-﻿### 0.0 导论
+### 0.0 导论
 1. 平方误差损失函数用于回归问题
 2. 指数损失函数用于分类问题
 
@@ -107,3 +107,7 @@ c<sub>mi</sub>是叶子节点的最佳残差拟合值。
 [GBDT理解二三事](https://blog.csdn.net/w28971023/article/details/43704775)
 
 [刘建平：梯度提升树(GBDT)原理小结](https://www.cnblogs.com/pinard/p/6140514.html)
+
+[机器学习系列1. GBDT算法的原理](https://blog.csdn.net/u012684933/article/details/51088609)
+
+[GBDT算法推导过程](https://www.cnblogs.com/wuxiangli/p/5973737.html)
