update machine learn

--- a/deep learning/二阶近似方法.md
+++ b/deep learning/二阶近似方法.md
@@ -1,4 +1,4 @@
-﻿### Hessian矩阵
+﻿### 1.0 Hessian矩阵
 设n多元实函数f(x<sub>1</sub>,x<sub>2</sub>,...,x<sub>n</sub>)在点M<sub>0</sub>(a<sub>1</sub>,a<sub>2</sub>,...,a<sub>n</sub>)的邻域内有二阶连续偏导，若有：
 
 ![hissian_1.jpg](https://i.imgur.com/62DULXQ.png)
@@ -17,7 +17,7 @@
 
 ![hissian_3.png](https://i.imgur.com/Sg2WiBs.png)
 
-### 牛顿法
+### 2.0 牛顿法
 牛顿法是基于二阶泰勒级数展开在某点 θ<sub>0</sub> 附近来近似 J(θ) 的优化方法，其忽略了高阶导数：
 
 ![niudun_1.png](https://i.imgur.com/swCBRZq.png)
@@ -34,5 +34,14 @@
 
 ![niudun_4.png](https://i.imgur.com/NTBinIp.png)
 
-### 共轭梯度
+### 3.0 共轭梯度
 
+### Q&A
+#### 为什么牛顿法比梯度下降法快?
+牛顿法是二阶收敛，梯度下降是一阶收敛，所以牛顿法就更快。如果更通俗地说的话，比如你想找一条最短的路径走到一个盆地的最底部，梯度下降法每次只从你当前所处位置选一个坡度最大的方向走一步，牛顿法在选择方向时，不仅会考虑坡度是否够大，还会考虑你走了一步之后，坡度是否会变得更大。所以，可以说牛顿法比梯度下降法看得更远一点，能更快地走到最底部。
+
+但是牛顿法要计算Hessian矩阵，比较费时间。
+
+参考:
+
+1. [最优化问题中，牛顿法为什么比梯度下降法求解需要的迭代次数更少？](https://www.zhihu.com/question/19723347)
