--- a/supervised learning/10boosting/提升树.md
+++ b/supervised learning/10boosting/提升树.md
@@ -1,4 +1,4 @@
-### 0.0 导论
+﻿### 0.0 导论
 1. 平方误差损失函数用于回归问题
 2. 指数损失函数用于分类问题
 
@@ -87,9 +87,8 @@ c<sub>mi</sub>是叶子节点的最佳残差拟合值。
 
 ![boost_tree_11.png](https://i.imgur.com/QQYyXYI.png)
 
-
 ### 3.0 Q&A
-#### GBDT优劣
+#### 3.1 GBDT优劣
 优点：</br>
 1. GBDT几乎可用于所有回归问题（线性/非线性），相对logistic regression仅能用于线性回归，GBDT的适用面非常广。亦可用于二分类问题（设定阈值，大于阈值为正例，反之为负例）。
 1. 在相对少的调参时间情况下，预测的准备率也可以比较高。这个是相对SVM来说的。
@@ -97,17 +96,21 @@ c<sub>mi</sub>是叶子节点的最佳残差拟合值。
 缺点：</br>
 1. 难以进行并行训练数据。
 
-#### RF与GBDT比较
+#### 3.2 RF与GBDT比较
 1. RF中树的棵树是并行生成的；GBDT中树是顺序生成的；两者中过多的树都会过拟合，但是GBDT更容易过拟合；
 2. RF中每棵树分裂的特征比较随机；GBDT中前面的树优先分裂对大部分样本区分的特征，后面的树分裂对小部分样本区分特征；
 3. RF中主要参数是树的棵数；GBDT中主要参数是树的深度，一般为1；
 
+#### 3.3 GBDT中树为什么必须是Cart?
+因为Cart可以作为回归树。分类树用于分类标签值，其结果无法累加。
+
 参考：
+1. [GBDT理解二三事](https://blog.csdn.net/w28971023/article/details/43704775)
 
-[GBDT理解二三事](https://blog.csdn.net/w28971023/article/details/43704775)
+1. [刘建平：梯度提升树(GBDT)原理小结](https://www.cnblogs.com/pinard/p/6140514.html)
 
-[刘建平：梯度提升树(GBDT)原理小结](https://www.cnblogs.com/pinard/p/6140514.html)
+1. [机器学习系列1. GBDT算法的原理](https://blog.csdn.net/u012684933/article/details/51088609)
 
-[机器学习系列1. GBDT算法的原理](https://blog.csdn.net/u012684933/article/details/51088609)
+1. [GBDT算法推导过程](https://www.cnblogs.com/wuxiangli/p/5973737.html)
 
-[GBDT算法推导过程](https://www.cnblogs.com/wuxiangli/p/5973737.html)
+1. [Tree ensemble算法的特征重要度计算](https://blog.csdn.net/yangxudong/article/details/53899260)
