--- a/supervised learning/10boosting/提升树.md
+++ b/supervised learning/10boosting/提升树.md
@@ -5,6 +5,10 @@
 ----------
 
 ### 1.0 提升树
+提升是一种机器学习技术，可以用于回归和分类的问题，它每一步产生弱预测模型(如决策树)，并加权累加到总模型中；如果每一步的弱预测模型的生成都是**依据损失函数的梯度**方式的，那么就称为梯度提升(Gradient boosting)
+
+提升技术的意义：如果一个问题存在弱预测模型，那么可以通过提升技术的办法得到一个强预测模型。
+
 #### 1.1 提升树模型
 提升树模型可以表示为决策树的加法模型
 
@@ -27,12 +31,12 @@
 输出：提升树 f<sub>M</sub>(x)
 
 (1) 初始化f<sub>0</sub>(x) = 0
-(2) 对m=1,2,...,M
+(2) 对m=1,2,...,M</br>
 (a) 计算残差
 
 ![boost_tree_5.png](https://i.imgur.com/g1b3VWb.png)
 
-(b) 拟合残差r<sub>mi</sub>学习一个回归树，得到T(x;θ<sub>m</sub>)
+(b) 拟合残差r<sub>mi</sub>学习一个回归树，得到T(x;θ<sub>m</sub>)</br>
 (c) 更新 f<sub>m</sub>(x) = f<sub>m-1</sub>(x) + T(x;θ<sub>m</sub>)
 
 (3) 得到回归问题提升树：
@@ -59,7 +63,7 @@
 
 ![boost_tree_7.png](https://i.imgur.com/cMgPG5Z.png)
 
-(2) 对m=1,2,...,M
+(2) 对m=1,2,...,M</br>
 (a) i=1,2,...,N 计算
 
 ![boost_tree_8.png](https://i.imgur.com/O7J47PL.png)
@@ -68,7 +72,7 @@
 
 ![gbdt_r_1.png](https://i.imgur.com/5t91bWu.png)
 
-(b) 对r<sub>mi</sub>拟合一个回归树，得到第m棵树的叶节点区域R<sub>mj</sub>，j=1,2,...,J；通常回归树需要满足低方差高偏差，而Cart树是理想的选择。
+(b) 对r<sub>mi</sub>拟合一个回归树，得到第m棵树的叶节点区域R<sub>mj</sub>，j=1,2,...,J；通常回归树需要满足低方差高偏差，而Cart树是理想的选择。</br>
 (c) 对j=1,2,...,J，计算
 
 ![boost_tree_9.png](https://i.imgur.com/OVETFnF.png)
